--- a/pom.xml
+++ b/pom.xml
@@ -28,5 +28,11 @@
           <version>6.8</version>
           <scope>test</scope>
       </dependency>
+
+      <dependency>
+          <groupId>org.slf4j</groupId>
+          <artifactId>slf4j-jdk14</artifactId>
+          <version>1.7.21</version>
+      </dependency>
   </dependencies>
 </project>
