--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
   <url>http://maven.apache.org</url>
 
   <properties>
-    <allure.version>1.4.23</allure.version>
+    <allure.version>1.4.1</allure.version>
     <aspectj.version>1.8.5</aspectj.version>
     <mavensurefire.version>2.19.1</mavensurefire.version>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -78,9 +78,8 @@
                 <version>9.2.10.v20150310</version>
                 <configuration>
                     <webAppSourceDirectory>${project.build.directory}/site/allure-maven-plugin</webAppSourceDirectory>
-                    <webApp>
-                        <contextPath>/abc</contextPath>
-                    </webApp>
+                    <stopKey>stop</stopKey>
+                    <stopPort>1234</stopPort>
                     <httpConnector>
                         <port>8888</port>
                     </httpConnector>
@@ -95,7 +94,7 @@
             <plugin>
                 <groupId>ru.yandex.qatools.allure</groupId>
                 <artifactId>allure-maven-plugin</artifactId>
-                <version>2.5</version>
+                <version>2.2</version>
             </plugin>
         </plugins>
     </reporting>
